...
class MenuScreen extends StatelessWidget {
  const MenuScreen({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('menuScreen'),
      appBar: AppBar(
        title: const Text('MAIN MENU'),
      ),
      body: const MenuScreenStateful(),
    );
  }
...
    );
  }

  Center getRouteButton() {
    return Center(
      child: ElevatedButton(
        key: const Key('getRoutesButton'),
        onPressed: _handleGetRouteButton,
        child: const Text("GET ROUTES"),
      ),
    );
  }

...
