...
class RouteDisplay extends StatelessWidget {
  const RouteDisplay({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('routeDisplayScreen'),
      appBar: AppBar(
        title: const Text('YOUR ROUTE'),
      ),
      body: const RouteDisplayStateful(),
    );
  }
...
